# js-intel-scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build_sidecar.sh  install.sh  package.json  requirements.txt  run.sh  update.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: cli.py  sidecar_entry.py
backend/ai/: gemini_analyzer.py
backend/api/: registry.py  server.py
backend/core/: config.py  orchestrator.py  report.py  runner.py  stages.py
backend/detectors/: ai_patterns.py  auth_patterns.py  cloud_patterns.py  comments_patterns.py  crypto_patterns.py  database_patterns.py  devops_patterns.py  endpoints_patterns.py  entropy.py  external_tools.py  extras.py  hashes_patterns.py  js_patterns.py  messaging_patterns.py  patterns.py  payment_patterns.py  pii_patterns.py  saas_patterns.py  severity.py
backend/plugins/: __init__.py  example_stats.py
backend/scanners/: crawl.py  downloader.py  recon.py  webfiles.py
docs/images/: README.md
frontend/: index.html
scripts/: screenshots.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_config.py  test_detectors.py  test_orchestrator.py  test_pipeline_config.py
