[package]
name = "js-intelligence"
version = "0.1.0"
description = "JS Intelligence & Sensitive Information Mining Platform"
authors = ["you"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "process-command-api", "window-close", "window-hide", "window-show"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "js-intelligence"
path = "src/main.rs"
